--- a/.github/workflows/generate_db.yml
+++ b/.github/workflows/generate_db.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+   - name: Install Node.js
+  uses: actions/setup-node@v3
+  with:
+    node-version: '18'
+
 
     - name: Generate database files
       run: |
