--- a/.github/workflows/seo-build.yml
+++ b/.github/workflows/seo-build.yml
@@ -20,7 +20,7 @@ jobs:
       - run: node scripts/generate-seo.js
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
 
       - run: |
           git config user.name "seo-bot"
