--- a/.github/workflows/seo-build.yml
+++ b/.github/workflows/seo-build.yml
@@ -8,23 +8,29 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - run: npm install node-fetch
+      - name: Install dependencies
+        run: npm install node-fetch
 
-      - run: node scripts/generate-seo.js
+      - name: Generate SEO pages
+        run: node scripts/generate-seo.js
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
 
-      - run: |
-    git config user.name "seo-bot"
-    git config user.email "seo@bot"
-    git add *.html
-    git commit -m "auto: build seo pages" || echo "no changes"
-    git push
+      - name: Commit generated pages
+        run: |
+          git config user.name "seo-bot"
+          git config user.email "seo@bot"
+          git add *.html
+          git commit -m "auto: build seo pages" || echo "no changes"
+          git push
