--- a/.github/workflows/seo-build.yml
+++ b/.github/workflows/seo-build.yml
@@ -1,8 +1,6 @@
-name: Auto SEO Generator
+name: SEO Generator
 
 on:
-  schedule:
-    - cron: "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,27 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm install node-fetch
-
       - name: Generate SEO pages
-        run: node scripts/generate-seo.js
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
-
-      - name: Commit generated pages
         run: |
-          git config user.name "seo-bot"
-          git config user.email "seo@bot"
-          git add *.html
-          git commit -m "auto: build seo pages" || echo "no changes"
-          git push
+          echo "SUPABASE_URL is set: ${SUPABASE_URL:+YES}"
+          echo "SUPABASE_SERVICE_KEY is set: ${SUPABASE_SERVICE_KEY:+YES}"
+          node scripts/generate-seo.js
